* Warning: For a seamless upgrade, upgrade to version 5        *
*          of the decoder before upgrading to version 5 of the *
*          encoder!                                            *
****************************************************************
5.001_002
    * Test compatibility fixes when no perl is already installed.

5.001_001
    * Test compatibility fixes with version 3 and earlier.

5.001
    * First official release of protocol 5. Better support for non
      standard NV types. Support for the new Perl 5.36 bools.
      Upgrade *Sereal::Decoder* FIRST.

5.000_002
    * Prerelease CPAN testing. Build fixes for quadmath and
      longdouble perls. Certain tests were failing with the old
      versions which were subtly broken on quadmath or longdouble
      machines. These tests are now skipped on these builds. You
      will not be able to fully test this platform until you install
      the Decoder, and then install the Encoder.

5.000_001
    * Prerelease CPAN testing for 5.000_000.

5.000_000 Tue Aug 30, 2022
    * Support quadmath builds with FLOAT_128 tag type.
    * Support YES/NO tags for booleans. Requires perl 5.36.

---

4.025 Thr Jul 28, 2022
    * Release with build fixes for threaded perls and MANIFEST
      update. Oops.

4.024 Wed Jul 27, 2022
    * Total rework of how THAW is invoked to resolve issues with
      frozen representations containing blessed objects.


4.023 Sun Feb 20, 2022
    * Make it possible to upgrade with passing tests when using
      Sereal::Decoder 4.015 - 4.019 on threaded debugging perls.

      IF YOU USE THREADED PERLS YOU ARE STRONGLY ADVISED TO UPDATE
      TO THIS VERSION OR LATER. *UPGRADE THE DECODER IMMEDIATELY.*

4.022 Sat Feb 19, 2022
4.021 Fri Feb 18, 2022
    * Early but incomplete versions of 4.023, skip these releases.

4.020 Thurs Feb 17, 2022
    * Fix "panic: free from wrong pool" errors on threaded builds.
      This error is only visible on DEBUGGING perls however it exists