@@ -15,6 +15,8 @@ please see the Encoder and Decoder changelogs:
 ****************************************************************
 5.001_002
     * Test compatibility fixes when no perl is already installed.
+    * Decoder: Add t/195_backcompat.t to check if the latest decoder 
+      will seamlessly handle reading output from older versions. 
 
 5.001_001
     * Test compatibility fixes with version 3 and earlier.
